Upgrade to java 21 (#16)
* Jenkins? No Jenkins to find.

* Upgraded to latest model version

* Latest gradlew

* Upgrade to Java 21

* Spesify distribution

* Updated README.md